--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-ml-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://tisza.dev/ChiliClassifier",
+  "homepage": "https://tisza.dev/ChiliClassifier",
   "dependencies": {
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
