modify name and icon

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ml-app",
+  "name": "deep-chili-classifier",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://tisza.dev/ChiliClassifier",
